--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://aaronandes.github.io/my-sample-react-app",
   "name": "sample-react-app",
   "version": "0.1.0",
   "private": true,
